# toronto-bylaw-rag

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: app.py
ingestion/: chunker.py  embedder_indexer.py  parser.py  runner.py
notebooks/: 01_parser_debugger.ipynb  02_chunker_debugger.ipynb  03_embedder_debugger.ipynb  04_ingestion_runner_debugger.ipynb  05_retrieve_debugger.ipynb  06_query_expander_debugger.ipynb  07_generator_debugger.ipynb  extraction_comparison.ipynb  parser_debugger.ipynb
retrieval/: domain_detect.py  generate.py  query_expand.py  retrieve.py
