[project]
name = "toronto-bylaw-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.92.0",
    "beautifulsoup4>=4.14.3",
    "flagembedding>=1.3.5",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
]
